# pyngres

./: .gitignore  LICENSE  README.md  apiscomm.py  requirements.txt  setup.cfg
examples/: README.md  apis2ph1.py  apis2ph2.py  apisauto.py  apisblob.py  apiscdel.py  apiscomm.py  apisconn.py  apiscupd.py  apisdata.py  apiserr.py  apisinit.py  apisname.py  apisparm.py  apisprbr.py  apisprgt.py  apisproc.py  apisprrp.py  apisrept.py  apisroll.py  apisscrl.py  apisselc.py  apissell.py  pyngres-demo-1.ipynb  varchar.py
examples/asyncio/: README.md  apiaauto.py  apiaconn.py
src/pyngres/: IIAPI_CONSTANTS.py  IIAPI_PARM.py  __init__.py  asyncio.py  blocking.py  pyngres.py
