[metadata]
name = pyngres
author = Roy Hann
author_email = roy.hann@rationalcommerce.com
description = Python bindings for Actian Ingres/Vector/X OpenAPI
version = 0.1.0
url = https://localhost/stub
license = MIT
keywords =
    Ingres
    Actian

[options]
install_requires =
    loguru >= "0.5.3"
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
