[metadata]
name = pyngres
author = Roy Hann
author_email = roy.hann@rationalcommerce.com
description = Python bindings for Actian Ingres/Vector/X OpenAPI
version = 0.4.2
url = https://github.com/quelgeek/pyngres
license = MIT
keywords =
    Ingres
    Actian
    HCL-Software

[options]
install_requires =
    loguru
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
